--- a/src/index.html
+++ b/src/index.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
-<html lang="pt-br"> <head>
+<html lang="pt-br">
+
+<head>
   <meta charset="UTF-8">
   <title>Gerenciar Baralhos Pokémon TCG - Gustavo Vasconcelos</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Gerencie suas coleções de baralhos do Pokémon TCG e prepare batalhas incríveis.">
-  
+
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="preload" href="styles.css" as="style"> 
+  <link rel="preload" href="styles.css" as="style">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
 
-  <meta property="og:title" content="Gerenciar Baralhos Pokémon TCG"> 
-  <meta property="og:description" content="Gerencie suas coleções de baralhos do Pokémon TCG e prepare batalhas incríveis.">
+  <meta property="og:title" content="Gerenciar Baralhos Pokémon TCG">
+  <meta property="og:description"
+    content="Gerencie suas coleções de baralhos do Pokémon TCG e prepare batalhas incríveis.">
   <meta property="og:image" content="https://meusite.com/pokemon-logo.png">
 
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+
 </html>
