--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="preload" href="styles.css" as="style">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
   <meta property="og:title" content="Gerenciar Baralhos Pokémon TCG">
   <meta property="og:description"
